--- a/booking.html
+++ b/booking.html
@@ -24,50 +24,38 @@
             <!-- Room 1 -->
             <img src="/assets/photos/04-night.jpg" alt="a comfortable hotel bedroom" class="main__img--1">
             <form action="#" class="main__form1 main__form--1a">
-                <p>Lorem ipsum:
-                    <input type="text">
-                </p>
+                <label for="name1">Lorem ipsum:<br></label>
+                <input type="text" placeholder="Your name" id="name1">
             </form>
             <form action="#" class="main__form1 main__form--1b">
-                <p>
                     <input type="date">
-                </p>
             </form>
             <!-- Room 2 -->
             <img src="/assets/photos/06-day.jpg" alt="a luxary 2-floor hotel room" class="main__img--2">
             <form action="#" class="main__form2 main__form--2a">
-                <p>Loremipsum: <!--Varför radbrytning-->
-                    <input type="text">
-                </p>
+                <label for="name2">Lorem ipsum:<br></label>
+                <input type="text" placeholder="Your name" id="name2">
             </form>
             <form action="#" class="main__form2 main__form--2b">
-                <p>
                     <input type="date">
-                </p>
             </form>
             <!-- Room 3 -->
             <img src="/assets/photos/03-day.jpg" alt="hotel bedroom window" class="main__img--3">
             <form action="#" class="main__form3 main__form--3a">
-                <p>Lorem ipsum:
-                    <input type="text">
-                </p>
+                <label for="name3">Lorem ipsum:<br></label>
+                <input type="text" placeholder="Your name" id="name3">
             </form>
             <form action="#" class="main__form3 main__form--3b">
-                <p>
                     <input type="date">
-                </p>
             </form>
             <!-- Room 4 -->
             <img src="/assets/photos/05-night.jpg" alt="a comfortable hotel bedroom with a desk" class="main__img--4">
             <form action="#" class="main__form4 main__form--4a">
-                <p>Lorem ipsum:
-                    <input type="text">
-                </p>
+                <label for="name4">Lorem ipsum:<br></label>
+                <input type="text" placeholder="Your name" id="name4">
             </form>
             <form action="#" class="main__form4 main__form--4b">
-                <p>
                     <input type="date">
-                </p>
             </form>
         </main>
         <footer>
