--- a/about_us.html
+++ b/about_us.html
@@ -10,17 +10,17 @@
 <link href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
-<body class="body--about-us">
+<body class="body--background-nature">
     <div class="wrapper">
-        <header class="about-us__header">
+        <header class="header__grey">
             <img src="/assets/logo/bonz.ai-logo-white-landscape.png" alt="logo">
         </header>
         <nav>
-            <a href="home.html" class="button about-us__button about-us__button-home">Home</a>
-            <a href="about_us.html" class="button about-us__button about-us__button-about-us">About us</a>
-            <a href="booking.html" class="button about-us__button about-us__button-booking">Booking</a>
+            <a href="home.html" class="button button--grey about-us__button-home">Home</a>
+            <a href="about_us.html" class="button button--grey about-us__button-about-us">About us</a>
+            <a href="booking.html" class="button button--grey about-us__button-booking">Booking</a>
         </nav>
-        <main class="about-us__main">
+        <main class="main__about-text">
             <h2>Lorem ipsum dolor sit</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod autem veritatis eos!</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
@@ -30,7 +30,7 @@
             <p>Adipisicing elit. In rerum commodi qui tenetur a.</p>
             <p>Sint, dolorum nesciunt nam alias beatae suscipit sit sequi!</p>
         </main>
-        <footer class="about-us__footer">
+        <footer class="footer__background">
             <p>Lorem ipsum dolor sit, amet consectetur elit. Repellendus sit vitae.</p>
         </footer>
     </div>    
