--- a/booking.html
+++ b/booking.html
@@ -10,7 +10,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
-<body class="body--booking">
+<body class="body--background-color">
     <div class="wrapper">
         <header>
             <img src="/assets/logo/bonz.ai-logo-white-landscape.png" alt="logo">
@@ -23,38 +23,38 @@
         <main class="main--booking">
             <!-- Room 1 -->
             <img src="/assets/photos/04-night.jpg" alt="a comfortable hotel bedroom" class="main__img--1">
-            <form action="#" class="main__form1 main__form--1a">
+            <form action="#" class="form1 form--1a main__form1 main__form--1a">
                 <label for="name1">Lorem ipsum:<br></label>
                 <input type="text" placeholder="Your name" id="name1">
             </form>
-            <form action="#" class="main__form1 main__form--1b">
+            <form action="#" class="form1 form--1b">
                     <input type="date">
             </form>
             <!-- Room 2 -->
             <img src="/assets/photos/06-day.jpg" alt="a luxary 2-floor hotel room" class="main__img--2">
-            <form action="#" class="main__form2 main__form--2a">
+            <form action="#" class="form2 form--2a">
                 <label for="name2">Lorem ipsum:<br></label>
                 <input type="text" placeholder="Your name" id="name2">
             </form>
-            <form action="#" class="main__form2 main__form--2b">
+            <form action="#" class="form2 form--2b">
                     <input type="date">
             </form>
             <!-- Room 3 -->
             <img src="/assets/photos/03-day.jpg" alt="hotel bedroom window" class="main__img--3">
-            <form action="#" class="main__form3 main__form--3a">
+            <form action="#" class="form3 form--3a">
                 <label for="name3">Lorem ipsum:<br></label>
                 <input type="text" placeholder="Your name" id="name3">
             </form>
-            <form action="#" class="main__form3 main__form--3b">
+            <form action="#" class="form3 form--3b">
                     <input type="date">
             </form>
             <!-- Room 4 -->
             <img src="/assets/photos/05-night.jpg" alt="a comfortable hotel bedroom with a desk" class="main__img--4">
-            <form action="#" class="main__form4 main__form--4a">
+            <form action="#" class="form4 form--4a">
                 <label for="name4">Lorem ipsum:<br></label>
                 <input type="text" placeholder="Your name" id="name4">
             </form>
-            <form action="#" class="main__form4 main__form--4b">
+            <form action="#" class="form4 form--4b">
                     <input type="date">
             </form>
         </main>
