--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
-<body class="body--home">
+<body class="body--background-window">
     <div class="wrapper">
         <header>
             <img src="/assets/logo/bonz.ai-logo-white-landscape.png" alt="logo">
