--- a/about_us.html
+++ b/about_us.html
@@ -12,13 +12,13 @@
 </head>
 <body class="body--background-nature">
     <div class="wrapper">
-        <header class="header__grey">
+        <header class="header--grey">
             <img src="/assets/logo/bonz.ai-logo-white-landscape.png" alt="logo">
         </header>
         <nav>
-            <a href="home.html" class="button button--grey about-us__button-home">Home</a>
-            <a href="about_us.html" class="button button--grey about-us__button-about-us">About us</a>
-            <a href="booking.html" class="button button--grey about-us__button-booking">Booking</a>
+            <a href="home.html" class="button button--grey">Home</a>
+            <a href="about_us.html" class="button button--grey">About us</a>
+            <a href="booking.html" class="button button--grey">Booking</a>
         </nav>
         <main class="main__about-text">
             <h2>Lorem ipsum dolor sit</h2>
