--- a/booking.html
+++ b/booking.html
@@ -16,9 +16,9 @@
             <img src="/assets/logo/bonz.ai-logo-white-landscape.png" alt="logo">
         </header>
         <nav>
-            <a href="home.html" class="button booking__button bokking__button-home">Home</a>
-            <a href="about_us.html" class="button booking__button booking__button-about-us">About us</a>
-            <a href="booking.html" class="button booking__button booking__button-booking">Booking</a>
+            <a href="home.html" class="button">Home</a>
+            <a href="about_us.html" class="button">About us</a>
+            <a href="booking.html" class="button">Booking</a>
         </nav>
         <main class="main--booking">
             <!-- Room 1 -->
