--- a/home.html
+++ b/home.html
@@ -16,9 +16,9 @@
             <img src="/assets/logo/bonz.ai-logo-white-landscape.png" alt="logo">
         </header>
         <nav>
-            <a href="home.html" class="button home__button home__button-home">Home</a>
-            <a href="about_us.html" class="button home__button home__button-about-us">About us</a>
-            <a href="booking.html" class="button home__button home__button-booking">Booking</a>
+            <a href="home.html" class="button">Home</a>
+            <a href="about_us.html" class="button">About us</a>
+            <a href="booking.html" class="button">Booking</a>
         </nav>
         <main></main>
         <footer>
